# context-os

./: .env.example  .gitignore  alembic.ini  pyproject.toml
.claude/: CLAUDE.md  plane-state.json  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  nightly-eval.yml
.reviews/: verification-pass.md
.reviews/completed/: 0c2f33f03edc-quality.md  0c2f33f03edc-spec.md  13008d9561fd-quality.md  13008d9561fd-spec.md  1727ed0284e6-quality.md  1727ed0284e6-spec.md  1c2b4ad-quality.md  1c2b4ad-spec.md  1c2b4ad9658d-quality.md  1c2b4ad9658d-spec.md  2677ab2e1fec-quality.md  2677ab2e1fec-spec.md  2bcbbfdb3133-quality.md  2bcbbfdb3133-spec.md  2d959d6e3d5b-quality.md  2d959d6e3d5b-spec.md  303c2c7950c6-quality.md  303c2c7950c6-spec.md  36dc7e7-quality.md  36dc7e7-spec.md  38b71f660f81-quality.md  38b71f660f81-spec.md  39fb1516030d-quality.md  39fb1516030d-spec.md  473834ad0908-quality.md  473834ad0908-spec.md  498d02f8d17b-quality.md  498d02f8d17b-spec.md  4dec84ca3889-quality.md  4dec84ca3889-spec.md  4f6243744709-quality.md  4f6243744709-spec.md  52d277ecf35b-quality.md  52d277ecf35b-spec.md  602795148c4a-quality.md  602795148c4a-spec.md  658f0f7e7718-quality.md  658f0f7e7718-spec.md  66507c8d3707-quality.md  66507c8d3707-spec.md  (+46 more)
.specify/memory/: constitution.md
docker/: Dockerfile.postgres  docker-compose.yml
docker/otel/: config.yaml
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: prd.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/plans/: 2026-05-17-prd-enrichment-design.md  2026-05-17-prd-new-user-amendment-design.md  2026-05-17-prd-new-user-amendment-plan.md  2026-05-17-prd-rewrite-plan.md
plans/test-feature/: tasks.md
scripts/: verify_isolation.py
specs/001-phase-1-foundation/: data-model.md  (+5 more)
tests/: conftest.py
web/: .eslintrc.json  .gitignore  .prettierignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+247 files in other folders)
