[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-os"
version = "0.1.0"
description = "AI-native operational intelligence platform — Phase 1 Foundation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "age>=0.5.0",
    "pgvector>=0.3",
    "clerk-backend-api>=1.0",
    "langfuse>=3.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "typer>=0.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres",
    "anthropic>=0.30",
    "python-levenshtein>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[asyncio]>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
context-os = "context_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/context_os"]

[tool.ruff]
exclude = [".claire", ".claude/worktrees"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["docker"]
venvPath = "."
venv = ".venv"
# Disable rules that produce false positives from untyped third-party libraries
# (asyncpg, pgvector, sentence-transformers, typer, age) and FastAPI decorator patterns
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportUnusedFunction = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/fault"]
